# summarizer

./: Cargo.toml  README.md
src/: main.rs
src/agent/: json_agent.rs  json_bot.rs  mod.rs  youtube_agent.rs  youtube_bot.rs
src/templates/: index.html
